Readme wasnt added to the solution?...

--- a/README
+++ b/README
@@ -13,3 +13,12 @@ Currently supports Datatable -> Raw data types
 							 -> Lists of custom objects
 							 
 More features to come
+
+TODO:
+	- Multiple generics with multiple tables within a dataset
+	- Saving Framework (TinyObject abstract?)
+		- Attributes
+		- Save directly to tables or SP's
+	- Move exceptions into TinyException namespace
+	- Maybe rename to the "TinyFramework"
+	- TinyMapper: Option to ignore missing columns/properties?
